syntax = "proto3";

package merchantBasic;

//generate pb.go file
//protoc --go_out=plugins=grpc:. ./proto/*.proto
option go_package = "./proto;proto";
option php_namespace = "Omy\\Crius\\MerchantBasicServer";

message GrowthConfig {
  string name = 1;
  uint32 top = 2;
  repeated string rules = 3;
}

message ShowGrowthConfigResponse {
  int32 error_code = 1;
  string error_message = 2;
  GrowthConfig data = 3;
}

message SaveGrowthConfigRequest {
  GrowthConfig config = 1;
}
